--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"python.pythonPath": "/home/jose/anaconda3/envs/dbp/bin/python"
+	"python.pythonPath": "C:\\Program Files\\Python37\\python.exe"
 }
