--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,92 @@
-Flask==1.0.2
+appdirs==1.4.4
+argon2-cffi==20.1.0  
+async-generator==1.10
+attrs==21.2.0        
+autopep8==1.5.7      
+backcall==0.2.0      
+bcrypt==3.2.0        
+bleach==3.3.0        
+cffi==1.14.5
+click==8.0.1
+colorama==0.4.4
+decorator==5.0.9
+defusedxml==0.7.1
+distlib==0.3.1
+dnspython==2.1.0
+dominate==2.6.0
+email-validator==1.1.2
+entrypoints==0.3
+filelock==3.0.12
+Flask==2.0.1
+Flask-Bcrypt==0.7.1
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+greenlet==1.1.0
+idna==3.2
+importlib-metadata==4.0.1
+ipykernel==5.5.5
+ipython==7.24.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.2
+mistune==0.8.4
+mysql-connector==2.2.9
+mysqlclient==2.0.3
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+nltk==3.6.2
+notebook==6.4.0
+packaging==20.9
+pandocfilters==1.4.3
+parso==0.8.2
+pickleshare==0.7.5
+prometheus-client==0.11.0
+prompt-toolkit==3.0.18
+protobuf==3.17.1
+psycopg2==2.8.6
+pycodestyle==2.7.0
+pycparser==2.20
+Pygments==2.9.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pywin32==301
+pywinpty==1.1.2
+pyzmq==22.1.0
+qtconsole==5.1.0
+QtPy==1.9.0
+regex==2021.4.4
+Send2Trash==1.5.0
+six==1.16.0
+SQLAlchemy==1.4.17
+terminado==0.10.1
+testpath==0.5.0
+toml==0.10.2
+tornado==6.1
+tqdm==4.61.0
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+virtualenv==20.4.6
+visitor==0.1.3
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.1
+widgetsnbextension==3.5.1
+WTForms==2.3.3
+zipp==3.4.1
