--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KusaStore"
         android:usesCleartextTraffic="true">
+        <activity android:name=".CreateActivity"/>
+        <activity android:name=".DeleteActivity"/>
+        <activity android:name=".UpdateActivity"/>
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".ProductsActivity"/>
         <activity android:name=".LoginActivity" />
